--- a/restaurant_app/ios/GoogleService-Info.plist
+++ b/restaurant_app/ios/GoogleService-Info.plist
@@ -9,7 +9,7 @@
 	<key>ANDROID_CLIENT_ID</key>
 	<string>410522356318-a06iuh8uimk0bpbq0jj96n1kbigrebre.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
-	<string>AIzaSyA8lpofCi358diupbxu_E8l29g349P1INc</string>
+	<string><API KEY RETRACTED></string>
 	<key>GCM_SENDER_ID</key>
 	<string>410522356318</string>
 	<key>PLIST_VERSION</key>
